# mp-news-room

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
knowledge/: mp_list.example.json
src/mp_news_feed/: crew.py  main.py  search_crew.py  search_service.py
src/mp_news_feed/config/: agents.yaml  search_tasks.yaml  tasks.yaml
src/mp_news_feed/tools/: __init__.py  brevo_tool.py  date_filtered_serper.py  sendgrid_tool.py
