[project]
name = "mp_news_feed"
version = "0.1.0"
description = "mp_news_feed using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "brevo-python>=1.0.0"
]

[project.scripts]
mp_news_feed = "mp_news_feed.main:run"
run_crew = "mp_news_feed.main:run"
train = "mp_news_feed.main:train"
replay = "mp_news_feed.main:replay"
test = "mp_news_feed.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
